Switched to using SASS

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="stylesheets/materialize.css"/>
+    <link type="text/css" rel="stylesheet" href="stylesheets/styles.css"/>
   </head>
   <nav class="light-blue accent-4">
     <div class="container">
@@ -55,5 +56,6 @@
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script type="text/javascript" src="js/materialize.min.js"></script>
+  <script type="text/javascript" src="js/js.js"></script>
 </body>
 </html>
