Changed grid breakpoints

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="stylesheets/materialize.css"/>
-    <link type="text/css" rel="stylesheet" href="stylesheets/styles.css"/>
+    <link type="text/css" rel="stylesheet" href="stylesheets/custom.css"/>
   </head>
   <nav class="light-blue accent-4">
     <div class="container">
@@ -21,8 +21,8 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col s12 m6">
-          <div class="card z-depth-3 cyan accent-4">
+        <div class="col s12 l6">
+          <div class="card z-depth-3 cyan">
             <div class="card-content">
               <h1>Card Title</h1>
               <p>This is sample content</p>
@@ -36,7 +36,7 @@
             </div>
           </div>
         </div>
-        <div class="col s12 m6">
+        <div class="col s12 l6">
           <div class="card z-depth-3 teal accent-4">
           <div class="card-content">
             <h1>Card Title</h1>
