Did some styling, messing around with colors

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <link type="text/css" rel="stylesheet" href="stylesheets/materialize.css"/>
     <link type="text/css" rel="stylesheet" href="stylesheets/custom.css"/>
   </head>
-  <nav class="light-blue accent-4">
+  <nav class="light-blue darken-1 z-depth-1">
     <div class="container">
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo">Coleman Rollins</a>
+        <a href="#" class="brand-logo white-text">Coleman Rollins</a>
         <ul id="nav-mobile" class="right side-nav">
           <li><a href="sass.html">Sass</a></li>
           <li><a href="components.html">Components</a></li>
@@ -19,10 +19,20 @@
   </nav>
   
   <body>
+    <div class="section">
+      <div class="container">
+        <h1 class="header light-blue-text darken-1">
+          A Portfolio Site
+        </h1>
+        <div class="row center">
+          <h4 class="header col s12 center light-blue-text darken-1">Minneapolis Based Web Developer</h4>
+        </div>
+      </div>
+    </div>
     <div class="container">
       <div class="row">
-        <div class="col s12 l6">
-          <div class="card z-depth-3 cyan">
+        <div class="col m12 l6">
+          <div class="card z-depth-3 cyan darken-1">
             <div class="card-content">
               <h1>Card Title</h1>
               <p>This is sample content</p>
@@ -36,26 +46,26 @@
             </div>
           </div>
         </div>
-        <div class="col s12 l6">
-          <div class="card z-depth-3 teal accent-4">
-          <div class="card-content">
-            <h1>Card Title</h1>
-            <p>This is sample content</p>
-          </div>
-          <div class="card-footer">
-            <p>Footer</p>
-            <p>Sample content</p>
-            <p>Sample content</p>
-            <a class="card-action" href="#">This is a link</a>
-            <a class="card-action" href="#">This is a link</a>
+        <div class="col m12 l6">
+          <div class="card z-depth-3 teal darken-1">
+            <div class="card-content">
+              <h1>Card Title</h1>
+              <p>This is sample content</p>
+            </div>
+            <div class="card-footer">
+              <p>Footer</p>
+              <p>Sample content</p>
+              <p>Sample content</p>
+              <a class="card-action" href="#">This is a link</a>
+              <a class="card-action" href="#">This is a link</a>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <!--Import jQuery before materialize.js-->
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script type="text/javascript" src="js/materialize.min.js"></script>
-  <script type="text/javascript" src="js/js.js"></script>
-</body>
+    <!--Import jQuery before materialize.js-->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/js.js"></script>
+  </body>
 </html>
