Added pic, viewport for responsive

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
   <head>
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="stylesheets/materialize.css"/>
-    <link type="text/css" rel="stylesheet" href="stylesheets/custom.css"/>
+    <link type="text/css" rel="stylesheet" href="stylesheets/materialize.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="stylesheets/custom.css" media="screen,projection"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
   </head>
   <nav class="light-blue darken-1 z-depth-1">
     <div class="container">
@@ -21,9 +22,14 @@
   <body>
     <div class="section">
       <div class="container">
-        <h1 class="header light-blue-text darken-1">
+        <div class="row">
+          <h1 class="header light-blue-text darken-1">
           A Portfolio Site
-        </h1>
+          </h1>
+        </div>
+        <div class="row center">
+          <img class="materialboxed me center" width="250" src="img/me.jpg">
+        </div>
         <div class="row center">
           <h4 class="header col s12 center light-blue-text darken-1">Minneapolis Based Web Developer</h4>
         </div>
