Added some more rows/sections

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       <div class="nav-wrapper">
         <a href="#" class="brand-logo white-text">Coleman Rollins</a>
         <ul id="nav-mobile" class="right side-nav">
-          <li><a href="sass.html">Sass</a></li>
-          <li><a href="components.html">Components</a></li>
-          <li><a href="javascript.html">JavaScript</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
         <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
       </div>
@@ -35,35 +35,86 @@
         </div>
       </div>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col m12 l6">
-          <div class="card z-depth-3 cyan darken-1">
-            <div class="card-content">
-              <h1>Card Title</h1>
-              <p>This is sample content</p>
+    <!-- experience section -->
+    <div class="section cyan darken-1">
+      <a name="experience"></a>
+      <div class="container">
+        <div class="row">
+          <h1 class="header white-text center-on-small-only">Experience</h1>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col m12 l6">
+            <div class="card z-depth-3 light-blue darken-1">
+              <div class="card-content">
+                <h1>Card Title</h1>
+                <p>This is sample content</p>
+              </div>
+              <div class="card-footer">
+                <p>Footer</p>
+                <p>Sample content</p>
+                <p>Sample content</p>
+                <a class="card-action" href="#">This is a link</a>
+                <a class="card-action" href="#">This is a link</a>
+              </div>
             </div>
-            <div class="card-footer">
-              <p>Footer</p>
-              <p>Sample content</p>
-              <p>Sample content</p>
-              <a class="card-action" href="#">This is a link</a>
-              <a class="card-action" href="#">This is a link</a>
+          </div>
+          <div class="col m12 l6">
+            <div class="card z-depth-3 teal darken-1">
+              <div class="card-content">
+                <h1>Card Title</h1>
+                <p>This is sample content</p>
+              </div>
+              <div class="card-footer">
+                <p>Footer</p>
+                <p>Sample content</p>
+                <p>Sample content</p>
+                <a class="card-action" href="#">This is a link</a>
+                <a class="card-action" href="#">This is a link</a>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col m12 l6">
-          <div class="card z-depth-3 teal darken-1">
-            <div class="card-content">
-              <h1>Card Title</h1>
-              <p>This is sample content</p>
+      </div>
+    </div>
+    <!-- projects -->
+    <div class="section">
+      <div class="container">
+        <div class="row">
+          <h1 class="header light-blue-text darken-1 center-on-small-only">Projects</h1>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col m12 l6">
+            <div class="card z-depth-3 light-blue darken-1">
+              <div class="card-content">
+                <h1>Card Title</h1>
+                <p>This is sample content</p>
+              </div>
+              <div class="card-footer">
+                <p>Footer</p>
+                <p>Sample content</p>
+                <p>Sample content</p>
+                <a class="card-action" href="#">This is a link</a>
+                <a class="card-action" href="#">This is a link</a>
+              </div>
             </div>
-            <div class="card-footer">
-              <p>Footer</p>
-              <p>Sample content</p>
-              <p>Sample content</p>
-              <a class="card-action" href="#">This is a link</a>
-              <a class="card-action" href="#">This is a link</a>
+          </div>
+          <div class="col m12 l6">
+            <div class="card z-depth-3 teal darken-1">
+              <div class="card-content">
+                <h1>Card Title</h1>
+                <p>This is sample content</p>
+              </div>
+              <div class="card-footer">
+                <p>Footer</p>
+                <p>Sample content</p>
+                <p>Sample content</p>
+                <a class="card-action" href="#">This is a link</a>
+                <a class="card-action" href="#">This is a link</a>
+              </div>
             </div>
           </div>
         </div>
