Added more cards

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <img class="materialboxed me center" width="250" src="img/me.jpg">
         </div>
         <div class="row center">
-          <h4 class="header col s12 center light-blue-text darken-1">Minneapolis Based Web Developer</h4>
+          <h4 class="header col s12 center light-blue-text darken-1">Minneapolis Based Web Developer/DevOps</h4>
         </div>
       </div>
     </div>
@@ -45,8 +45,22 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col m12 l6">
+          <div class="col s12 l6">
             <div class="card z-depth-3 light-blue darken-1">
+              <div class="card-content">
+                <h1>TEN7 Interactive</h1>
+                <p>Developer/DevOps/QA</p>
+              </div>
+              <div class="card-footer">
+                <p>Footer</p>
+                <p>Sample content</p>
+                <p>Sample content</p>
+                <a class="card-action" href="http://then7.com">TEN7</a>
+              </div>
+            </div>
+          </div>
+          <div class="col s12 l6">
+            <div class="card z-depth-3 orange">
               <div class="card-content">
                 <h1>Card Title</h1>
                 <p>This is sample content</p>
@@ -60,8 +74,24 @@
               </div>
             </div>
           </div>
-          <div class="col m12 l6">
-            <div class="card z-depth-3 teal darken-1">
+        </div>
+        <div class="row">
+          <div class="col s12 l6">
+            <div class="card z-depth-3 deep-orange">
+              <div class="card-content">
+                <h1>TEN7 Interactive</h1>
+                <p>Developer/DevOps/QA</p>
+              </div>
+              <div class="card-footer">
+                <p>Footer</p>
+                <p>Sample content</p>
+                <p>Sample content</p>
+                <a class="card-action" href="http://then7.com">TEN7</a>
+              </div>
+            </div>
+          </div>
+          <div class="col s12 l6">
+            <div class="card z-depth-3 green lighten-1">
               <div class="card-content">
                 <h1>Card Title</h1>
                 <p>This is sample content</p>
@@ -87,7 +117,7 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col m12 l6">
+          <div class="col s12 l6">
             <div class="card z-depth-3 light-blue darken-1">
               <div class="card-content">
                 <h1>Card Title</h1>
@@ -102,7 +132,7 @@
               </div>
             </div>
           </div>
-          <div class="col m12 l6">
+          <div class="col s12 l6">
             <div class="card z-depth-3 teal darken-1">
               <div class="card-content">
                 <h1>Card Title</h1>
