More stles/JS tweaks

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="nav-wrapper">
         <a href="#" class="brand-logo white-text">Coleman Rollins</a>
         <ul id="nav-mobile" class="right side-nav">
-          <li><a href="#experience">Experience</a></li>
+          <li><a href="#experience" class="smoove">EXPERIENCE</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -32,6 +32,9 @@
         </div>
         <div class="row center">
           <h4 class="header col s12 center light-blue-text darken-1">Minneapolis Based Web Developer/DevOps</h4>
+        </div>
+        <div class="row center">
+          <a href="#" class="waves-effect waves-light btn light-blue darken-1">Button</a>
         </div>
       </div>
     </div>
