--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <nav class="light-blue darken-1 z-depth-1">
     <div class="container">
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo white-text"><img height="64" width="71" src="img/c.png"></a>
+        <a href="#" class="brand-logo white-text"><img class="brand" src="img/c.png"></a>
         <ul id="nav-mobile" class="right side-nav">
           <li><a href="#experience" class="smoove">Experience</a></li>
           <li><a href="#projects">Projects</a></li>
