Changed it up big time, added 2nd and 3rd pages w/AWESOME tabs

--- a/work.html
+++ b/work.html
@@ -18,41 +18,18 @@
       </div>
     </div>
   </nav>
-  
+  <div class="col s12">
+    <ul class="tabs z-depth-1">
+      <li class="tab col l4"><a href="#tab1">TEN7 Interactive</a></li>
+      <li class="tab col l4"><a href="#tab2">Pearson Vue</a></li>
+      <li class="tab col l4"><a href="#tab3">University Of Minnesota</a></li>
+    </ul>
+  </div>
   <body>
-    <div class="section">
-      <div class="container">
-        <div class="row">
-          <h1 class="header light-blue-text darken-1">
-          A Portfolio Site
-          </h1>
-        </div>
-        <div class="row center">
-          <img class="materialboxed me center" width="250" src="img/me.jpg">
-        </div>
-        <div class="row center">
-          <h4 class="header col s12 center light-blue-text darken-1">Minneapolis Based Web Developer/DevOps</h4>
-        </div>
-        <div class="row center">
-          <div class="col s12 l4">
-            <a href="work.html" class="waves-effect waves-light btn light-blue darken-1">My Work</a>
-          </div>
-          <div class="col s12 l4">
-            <a href="about.html" class="waves-effect waves-light btn light-blue darken-1">About Me</a>
-          </div>
-          <div class="col s12 l4">
-            <a href="#contact" class="waves-effect waves-light btn light-blue darken-1">Get In touch</a>
-          </div>
-          
-        </div>
-      </div>
-    </div>
-    <div class="section grey darken-4">
-      <div class="container">
-        <div class="row center">
-          <a href="https://twitter.com/Kole_MANN" target="_blank"><img src="img/twitter.png"></a>
-        </div>
-      </div>
+    <div class="container">
+      <div id="tab1" class="col s12">Test 1</div>
+      <div id="tab2" class="col s12">Test 2</div>
+      <div id="tab3" class="col s12">Test 3</div>
     </div>
     <!-- footer -->
     <div class="section light-blue darken-1">
