Added starter content to work tabs

--- a/work.html
+++ b/work.html
@@ -18,18 +18,198 @@
       </div>
     </div>
   </nav>
-  <div class="col s12">
-    <ul class="tabs z-depth-1">
-      <li class="tab col l4"><a href="#tab1">TEN7 Interactive</a></li>
-      <li class="tab col l4"><a href="#tab2">Pearson Vue</a></li>
-      <li class="tab col l4"><a href="#tab3">University Of Minnesota</a></li>
-    </ul>
+  <div class="row center fixed">
+    <div class="col s12 fixed">
+      <ul class="tabs z-depth-1">
+        <li class="tab"><a href="#tab1">TEN7</a></li>
+        <li class="tab"><a href="#tab2">Pearson</a></li>
+        <li class="tab"><a href="#tab3">U Of M</a></li>
+        <li class="tab"><a href="#tab4">Education</a></li>
+      </ul>
+    </div>
   </div>
   <body>
+    <!-- TEN7 -->
     <div class="container">
-      <div id="tab1" class="col s12">Test 1</div>
-      <div id="tab2" class="col s12">Test 2</div>
-      <div id="tab3" class="col s12">Test 3</div>
+      <div id="tab1" class="col s12">
+        <div class="section">
+          <div class="container">
+            <div class="row">
+              <div class="row">
+              <div class="col s12">
+                <h2 class="header light-blue-text darken-1">Roles</h2>
+                <div class="card z-depth-3 green lighten-1">
+                  <!-- TEN7 section -->
+                  <div class="card-content">
+                    <h1>TEN7 Interactive</h1>
+                    <p>Developer/DevOps/QA</p>
+                  </div>
+                  <div class="card-footer">
+                    <p>September 2013 - Present</p>
+                    <p>Maintained and updated production and development servers, as well as Git repositories</p>
+                    <p>Sample content</p>
+                    <a class="card-action" href="http://then7.com">TEN7</a>
+                  </div>
+                </div>
+              </div>
+              </div>
+              <div class="row">
+              <div class="col s12">
+                <h2 class="header light-blue-text darken-1">Projects</h2>
+                <div class="card z-depth-3 orange">
+                  <div class="card-content">
+                    <h1>Card Title</h1>
+                    <p>This is sample content</p>
+                  </div>
+                  <div class="card-footer">
+                    <p>Footer</p>
+                    <p>Sample content</p>
+                    <p>Sample content</p>
+                    <a class="card-action" href="#">This is a link</a>
+                    <a class="card-action" href="#">This is a link</a>
+                  </div>
+                </div>
+              </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Pearson -->
+      <div id="tab2" class="col s12">
+        <div class="section">
+          <div class="container">
+            <div class="row">
+              <div class="row">
+              <div class="col s12">
+                <h2 class="header light-blue-text darken-1">Roles</h2>
+                <div class="card z-depth-3 green lighten-1">
+                  <!-- TEN7 section -->
+                  <div class="card-content">
+                    <h1>Pearson Vue</h1>
+                    <p>Developer/DevOps/QA</p>
+                  </div>
+                  <div class="card-footer">
+                    <p>September 2013 - Present</p>
+                    <p>Maintained and updated production and development servers, as well as Git repositories</p>
+                    <p>Sample content</p>
+                    <a class="card-action" href="http://then7.com">TEN7</a>
+                  </div>
+                </div>
+              </div>
+              </div>
+              <div class="row">
+              <div class="col s12">
+                <h2 class="header light-blue-text darken-1">Projects</h2>
+                <div class="card z-depth-3 orange">
+                  <div class="card-content">
+                    <h1>Card Title</h1>
+                    <p>This is sample content</p>
+                  </div>
+                  <div class="card-footer">
+                    <p>Footer</p>
+                    <p>Sample content</p>
+                    <p>Sample content</p>
+                    <a class="card-action" href="#">This is a link</a>
+                    <a class="card-action" href="#">This is a link</a>
+                  </div>
+                </div>
+              </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- U of M -->
+      <div id="tab3" class="col s12">
+        <div class="section">
+          <div class="container">
+            <div class="row">
+              <div class="row">
+              <div class="col s12">
+                <h2 class="header light-blue-text darken-1">Roles</h2>
+                <div class="card z-depth-3 green lighten-1">
+                  <!-- TEN7 section -->
+                  <div class="card-content">
+                    <h1>University of MN - IT Department</h1>
+                    <p>Developer/DevOps/QA</p>
+                  </div>
+                  <div class="card-footer">
+                    <p>September 2013 - Present</p>
+                    <p>Maintained and updated production and development servers, as well as Git repositories</p>
+                    <p>Sample content</p>
+                    <a class="card-action" href="http://then7.com">TEN7</a>
+                  </div>
+                </div>
+              </div>
+              </div>
+              <div class="row">
+              <div class="col s12">
+                <h2 class="header light-blue-text darken-1">Projects</h2>
+                <div class="card z-depth-3 orange">
+                  <div class="card-content">
+                    <h1>Card Title</h1>
+                    <p>This is sample content</p>
+                  </div>
+                  <div class="card-footer">
+                    <p>Footer</p>
+                    <p>Sample content</p>
+                    <p>Sample content</p>
+                    <a class="card-action" href="#">This is a link</a>
+                    <a class="card-action" href="#">This is a link</a>
+                  </div>
+                </div>
+              </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Education -->
+      <div id="tab4" class="col s12">
+        <div class="section">
+          <div class="container">
+            <div class="row">
+              <div class="row">
+              <div class="col s12">
+                <h2 class="header light-blue-text darken-1">Roles</h2>
+                <div class="card z-depth-3 green lighten-1">
+                  <!-- TEN7 section -->
+                  <div class="card-content">
+                    <h1>BS Physics</h1>
+                    <p>Developer/DevOps/QA</p>
+                  </div>
+                  <div class="card-footer">
+                    <p>September 2013 - Present</p>
+                    <p>Maintained and updated production and development servers, as well as Git repositories</p>
+                    <p>Sample content</p>
+                    <a class="card-action" href="http://then7.com">TEN7</a>
+                  </div>
+                </div>
+              </div>
+              </div>
+              <div class="row">
+              <div class="col s12">
+                <h2 class="header light-blue-text darken-1">Projects</h2>
+                <div class="card z-depth-3 orange">
+                  <div class="card-content">
+                    <h1>Card Title</h1>
+                    <p>This is sample content</p>
+                  </div>
+                  <div class="card-footer">
+                    <p>Footer</p>
+                    <p>Sample content</p>
+                    <p>Sample content</p>
+                    <a class="card-action" href="#">This is a link</a>
+                    <a class="card-action" href="#">This is a link</a>
+                  </div>
+                </div>
+              </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- footer -->
     <div class="section light-blue darken-1">
