Changed up some card structure

--- a/work.html
+++ b/work.html
@@ -19,7 +19,7 @@
     </div>
   </nav>
   <div class="row center fixed">
-    <div class="col s12 fixed">
+    <div class="col s12 fixed no-pad">
       <ul class="tabs z-depth-1">
         <li class="tab"><a href="#tab1">TEN7</a></li>
         <li class="tab"><a href="#tab2">Pearson</a></li>
@@ -33,16 +33,14 @@
     <div class="container">
       <div id="tab1" class="col s12">
         <div class="section">
-          <div class="container">
+          <h1 class="header light-blue-text darken-1">TEN7 Interactive</h1>
             <div class="row">
-              <div class="row">
+              <h2 class="header light-blue-text darken-1">Roles</h2>
               <div class="col s12">
-                <h2 class="header light-blue-text darken-1">Roles</h2>
                 <div class="card z-depth-3 green lighten-1">
-                  <!-- TEN7 section -->
                   <div class="card-content">
-                    <h1>TEN7 Interactive</h1>
-                    <p>Developer/DevOps/QA</p>
+                    <h1>Developer</h1>
+                    <p>Developer</p>
                   </div>
                   <div class="card-footer">
                     <p>September 2013 - Present</p>
@@ -52,8 +50,39 @@
                   </div>
                 </div>
               </div>
+
+            </div>
+            <div class="row">
+              <div class="col s12 l6">
+                <div class="card z-depth-3 cyan">
+                  <div class="card-content">
+                    <h1>Quality Assurance Analyst</h1>
+                    <p>QA</p>
+                  </div>
+                  <div class="card-footer">
+                    <p>September 2013 - Present</p>
+                    <p>Maintained and updated production and development servers, as well as Git repositories</p>
+                    <p>Sample content</p>
+                    <a class="card-action" href="http://then7.com">TEN7</a>
+                  </div>
+                </div>
               </div>
-              <div class="row">
+              <div class="col s12 l6">
+                <div class="card z-depth-3 indigo">
+                  <div class="card-content">
+                    <h1>DevOps</h1>
+                    <p>DevOps</p>
+                  </div>
+                  <div class="card-footer">
+                    <p>September 2013 - Present</p>
+                    <p>Maintained and updated production and development servers, as well as Git repositories</p>
+                    <p>Sample content</p>
+                    <a class="card-action" href="http://then7.com">TEN7</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
               <div class="col s12">
                 <h2 class="header light-blue-text darken-1">Projects</h2>
                 <div class="card z-depth-3 orange">
@@ -70,20 +99,18 @@
                   </div>
                 </div>
               </div>
-              </div>
             </div>
-          </div>
+
         </div>
       </div>
       <!-- Pearson -->
       <div id="tab2" class="col s12">
         <div class="section">
-          <div class="container">
+          <div class="row">
             <div class="row">
-              <div class="row">
               <div class="col s12">
                 <h2 class="header light-blue-text darken-1">Roles</h2>
-                <div class="card z-depth-3 green lighten-1">
+                <div class="card z-depth-3 orange lighten-1">
                   <!-- TEN7 section -->
                   <div class="card-content">
                     <h1>Pearson Vue</h1>
@@ -97,8 +124,8 @@
                   </div>
                 </div>
               </div>
-              </div>
-              <div class="row">
+            </div>
+            <div class="row">
               <div class="col s12">
                 <h2 class="header light-blue-text darken-1">Projects</h2>
                 <div class="card z-depth-3 orange">
@@ -115,7 +142,6 @@
                   </div>
                 </div>
               </div>
-              </div>
             </div>
           </div>
         </div>
@@ -123,12 +149,11 @@
       <!-- U of M -->
       <div id="tab3" class="col s12">
         <div class="section">
-          <div class="container">
+          <div class="row">
             <div class="row">
-              <div class="row">
               <div class="col s12">
                 <h2 class="header light-blue-text darken-1">Roles</h2>
-                <div class="card z-depth-3 green lighten-1">
+                <div class="card z-depth-3 cyan lighten-1">
                   <!-- TEN7 section -->
                   <div class="card-content">
                     <h1>University of MN - IT Department</h1>
@@ -142,8 +167,8 @@
                   </div>
                 </div>
               </div>
-              </div>
-              <div class="row">
+            </div>
+            <div class="row">
               <div class="col s12">
                 <h2 class="header light-blue-text darken-1">Projects</h2>
                 <div class="card z-depth-3 orange">
@@ -160,7 +185,6 @@
                   </div>
                 </div>
               </div>
-              </div>
             </div>
           </div>
         </div>
@@ -168,12 +192,11 @@
       <!-- Education -->
       <div id="tab4" class="col s12">
         <div class="section">
-          <div class="container">
+          <div class="row">
             <div class="row">
-              <div class="row">
               <div class="col s12">
                 <h2 class="header light-blue-text darken-1">Roles</h2>
-                <div class="card z-depth-3 green lighten-1">
+                <div class="card z-depth-3 red lighten-1">
                   <!-- TEN7 section -->
                   <div class="card-content">
                     <h1>BS Physics</h1>
@@ -187,8 +210,8 @@
                   </div>
                 </div>
               </div>
-              </div>
-              <div class="row">
+            </div>
+            <div class="row">
               <div class="col s12">
                 <h2 class="header light-blue-text darken-1">Projects</h2>
                 <div class="card z-depth-3 orange">
@@ -204,7 +227,6 @@
                     <a class="card-action" href="#">This is a link</a>
                   </div>
                 </div>
-              </div>
               </div>
             </div>
           </div>
