--- a/work.html
+++ b/work.html
@@ -18,7 +18,7 @@
       </div>
     </div>
   </nav>
-  <div class="row center fixed">
+  <div class="row center fixed" id="tabz">
     <div class="col s12 fixed no-pad">
       <ul class="tabs z-depth-1">
         <li class="tab"><a href="#tab1">TEN7</a></li>
@@ -40,13 +40,12 @@
                 <div class="card z-depth-3 green lighten-1">
                   <div class="card-content">
                     <h1>Developer</h1>
-                    <p>Developer</p>
                   </div>
                   <div class="card-footer">
-                    <p>September 2013 - Present</p>
-                    <p>Maintained and updated production and development servers, as well as Git repositories</p>
-                    <p>Sample content</p>
-                    <a class="card-action" href="http://then7.com">TEN7</a>
+                    <p>December 2013 - Present</p>
+                    <p><strong>Description: </strong>I've worked on a wide variety of projects at TEN7. From small support roles on existing sites, to starting a site from scratch as the lead developer. I've been fortunate enough to experience working in teams, as well as individually, while using new technologies every day.</p>
+                    <p><strong>Skills: </strong>Drupal, git, drush, HTML5, CSS (including LESS & SCSS), JavaScript (jQuery), Multiple Web Frameworks, PhotoShop</p>
+                    <a class="card-action" href="http://then7.com">Link to TEN7</a>
                   </div>
                 </div>
               </div>
