--- a/work.html
+++ b/work.html
@@ -36,7 +36,7 @@
           <h1 class="header light-blue-text darken-1">TEN7 Interactive</h1>
             <div class="row">
               <h2 class="header light-blue-text darken-1">Roles</h2>
-              <div class="col s12">
+              <div class="col s12 l6">
                 <div class="card z-depth-3 green lighten-1">
                   <div class="card-content">
                     <h1>Developer</h1>
@@ -49,8 +49,15 @@
                   </div>
                 </div>
               </div>
-
+              <div class="col s12 l6">
+                <div class="card-panel">
+                  <div class="card-image">
+                  <img src="img/computer.jpg">
+                  </div>
+                </div>
+              </div>
             </div>
+
             <div class="row">
               <div class="col s12 l6">
                 <div class="card z-depth-3 cyan">
@@ -70,13 +77,11 @@
                 <div class="card z-depth-3 indigo">
                   <div class="card-content">
                     <h1>DevOps</h1>
-                    <p>DevOps</p>
                   </div>
                   <div class="card-footer">
                     <p>September 2013 - Present</p>
                     <p>Maintained and updated production and development servers, as well as Git repositories</p>
                     <p>Sample content</p>
-                    <a class="card-action" href="http://then7.com">TEN7</a>
                   </div>
                 </div>
               </div>
