Removed image cause bad

--- a/work.html
+++ b/work.html
@@ -36,7 +36,7 @@
           <h1 class="header light-blue-text darken-1">TEN7 Interactive</h1>
             <div class="row">
               <h2 class="header light-blue-text darken-1">Roles</h2>
-              <div class="col s12 l6">
+              <div class="col s12">
                 <div class="card z-depth-3 green lighten-1">
                   <div class="card-content">
                     <h1>Developer</h1>
@@ -49,13 +49,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col s12 l6">
-                <div class="card-panel">
-                  <div class="card-image">
-                  <img src="img/computer.jpg">
-                  </div>
-                </div>
-              </div>
+            
             </div>
 
             <div class="row">
